[package]
name = "bevy_monitors"
description = "A reactive(ish) crate for the bevy engine"

authors = [ "Freyja Moth" ]

license = "MIT OR Apache-2.0"
repository = "https://github.com/Freyja-moth/bevy_monitors"

version = "0.2.0"
edition = "2024"

[dependencies]
bevy_app = "0.18.0"
bevy_ecs = "0.18.0"
bevy_reflect = "0.18.0"

[dev-dependencies]
bevy = { version = "0.18.0", features = ["experimental_bevy_ui_widgets"] }
