[package]
name = "bevy_monitors"
description = "A reactive(ish) crate for the bevy engine"

authors = [ "Freyja Moth" ]

license = "MIT OR Apache-2.0"
repository = "https://github.com/Freyja-moth/bevy_monitors"

version = "0.2.2"
edition = "2024"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["bevy_feathers"] }
